# notebooks

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
cto_notebooks/data/: analysis_grascco.py  cardio_de.py  grascco.py  preprocess_cardio_de.py
cto_notebooks/llm/: lora_unstructured.py  lora_vicuna.py  merge_lora.py  quantize_model.py  run_gguf.py  run_lora.py  train_lora_cardio_gen.py  train_lora_grassco_qa.py  train_lora_grassco_qa_alt.py  train_lora_grassco_qa_search.py  train_lora_unstructured.py  train_lora_vicuna.py
cto_notebooks/utils/: cas.py  config.py  data.py  format.py  label_studio.py  lora.py  rag.py  training.py
